removed fixed height for #slider on application.css.scss - was overlapping bottom section

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,8 +30,6 @@ section {
 
 
 #slider {
-  height: 300px;
-
 	  img {
 	  width: 100%;
 	}
